solve two cars problem

--- a/src/app/pages/compare/compare.component.html
+++ b/src/app/pages/compare/compare.component.html
@@ -183,7 +183,7 @@
                     </div>
 
                     <!-- card three -->
-                    <div class="card  card-three">
+                    <div class="card">
                         <div class="card-imge">
                             <div class="adding-image" *ngIf="!selectedCar3">
                                 <div class="plus">
@@ -220,7 +220,7 @@
                     </div>
 
                     <!-- card four -->
-                    <div class="card card-three">
+                    <div class="card">
                         <div class="card-imge">
                             <div class="adding-image" *ngIf="!selectedCar4">
                                 <div class="plus">
